--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   ],
   "scripts": {
     "build": "tsup src/index.ts --format cjs,esm --dts --clean",
+    "build:watch": "tsup src/index.ts --format cjs,esm --dts --watch",
     "lint": "eslint src --ext .ts",
     "test": "vitest run",
     "test:watch": "vitest",
@@ -40,13 +41,20 @@
   },
   "homepage": "https://github.com/MagicFeedback/deepdots-popup-sdk#readme",
   "devDependencies": {
+    "@magicfeedback/native": "^2.1.2-beta.2",
     "@types/node": "^20.10.0",
     "@typescript-eslint/eslint-plugin": "^6.13.0",
     "@typescript-eslint/parser": "^6.13.0",
     "eslint": "^8.54.0",
+    "happy-dom": "^14.12.0",
     "jsdom": "^27.1.0",
     "tsup": "^8.0.1",
     "typescript": "^5.3.2",
     "vitest": "^1.0.4"
+  },
+  "dependencies": {
+    "build": "^0.1.4",
+    "npm": "^11.6.2",
+    "run": "^1.5.0"
   }
 }
