--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
   },
   "homepage": "https://github.com/MagicFeedback/deepdots-popup-sdk#readme",
   "devDependencies": {
-    "@magicfeedback/native": "^2.1.2-beta.7",
+    "@magicfeedback/native": "^2.1.4",
     "@types/node": "^20.10.0",
     "@typescript-eslint/eslint-plugin": "^6.13.0",
     "@typescript-eslint/parser": "^6.13.0",
